# framewise

./: .gitignore  README.md  pyproject.toml
framewise_py/: __init__.py  __main__.py  _lab_server_config.py  console_panel.py  loaders.py  main.py  main_window.py  master_clock.py  namespace.py  notebook_panel.py  panels.py  roi.py  segmentation.py  segmentation_panel.py  settings.py  signal_panel.py  spectrogram_panel.py  sync.py  video_panel.py
framewise_py/_napari_archive/: __init__.py  main.py  viewer_pool.py
scripts/: make_test_hdf5.py  make_test_tiff_video.py
